content/docs/0.7.x/reference/cli/commands/keptn.md
---
date: "2020-10-12T14:26:31+02:00"
title: "keptn"
slug: keptn
---
## keptn

The CLI for using Keptn

### Synopsis

The CLI allows interaction with a Keptn installation to manage Keptn, to trigger workflows, and to get details.
	

### Options

```
  -h, --help                 help for keptn
      --mock                 Disables communication to a Keptn endpoint
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn add-resource](../keptn_add-resource/)	 - Adds a local resource to a service within your project in the specified stage
* [keptn auth](../keptn_auth/)	 - Authenticates the Keptn CLI against a Keptn installation
* [keptn configure](../keptn_configure/)	 - Configures one of the specified parts of Keptn
* [keptn create](../keptn_create/)	 - Creates a new project or service
* [keptn delete](../keptn_delete/)	 - Deletes a project
* [keptn generate](../keptn_generate/)	 - Generates the markdown CLI documentation or a support archive
* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service
* [keptn install](../keptn_install/)	 - Installs Keptn on a Kubernetes cluster
* [keptn onboard](../keptn_onboard/)	 - Creates a new service and uploads its Helm chart to the branches in the Git repository
* [keptn send](../keptn_send/)	 - Sends an event to Keptn
* [keptn set](../keptn_set/)	 - Sets flags of the CLI configuration
* [keptn status](../keptn_status/)	 - Checks the status of the CLI
* [keptn uninstall](../keptn_uninstall/)	 - Uninstalls Keptn from a Kubernetes cluster
* [keptn update](../keptn_update/)	 - Updates an existing Keptn project
* [keptn upgrade](../keptn_upgrade/)	 - Upgrades Keptn on a Kubernetes cluster
* [keptn version](../keptn_version/)	 - Shows the version of Keptn and Keptn CLI

###### Auto generated by spf13/cobra on 12-Oct-2020
