content/docs/0.8.x/reference/cli/commands/keptn.md
---
date: "2021-06-16T14:50:20+02:00"
title: "keptn"
slug: keptn
---
## keptn

The CLI for using Keptn

### Synopsis

The CLI allows interaction with a Keptn installation to manage Keptn, to trigger workflows, and to get details.
	

### Options

```
  -h, --help               help
      --mock               Disables communication to a Keptn endpoint
  -n, --namespace string   Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet              Suppresses debug and info messages
  -v, --verbose            Enables verbose logging to print debug messages
  -y, --yes                Assume yes for all user prompts
```

### SEE ALSO

* [keptn add-resource](../keptn_add-resource/)	 - Adds a local resource to a service within your project in the specified stage
* [keptn auth](../keptn_auth/)	 - Authenticates the Keptn CLI against a Keptn installation
* [keptn completion](../keptn_completion/)	 - Generate completion script
* [keptn configure](../keptn_configure/)	 - Configures one of the specified parts of Keptn
* [keptn create](../keptn_create/)	 - Creates a new project or service
* [keptn delete](../keptn_delete/)	 - Deletes a project
* [keptn generate](../keptn_generate/)	 - Generates the markdown CLI documentation or a support archive
* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service
* [keptn install](../keptn_install/)	 - Installs Keptn on a Kubernetes cluster
* [keptn send](../keptn_send/)	 - Sends an event to Keptn
* [keptn set](../keptn_set/)	 - Sets flags of the CLI configuration
* [keptn status](../keptn_status/)	 - Checks the status of the CLI
* [keptn trigger](../keptn_trigger/)	 - Triggers the execution of an action in keptn
* [keptn uninstall](../keptn_uninstall/)	 - Uninstalls Keptn from a Kubernetes cluster
* [keptn update](../keptn_update/)	 - Updates an existing Keptn project
* [keptn upgrade](../keptn_upgrade/)	 - Upgrades Keptn on a Kubernetes cluster and supports upgrading the shipyard of a project to a new specification.
* [keptn version](../keptn_version/)	 - Shows the version of Keptn and Keptn CLI

###### Auto generated by spf13/cobra on 16-Jun-2021
